--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
   <!-- About || 關於我 -->
 
   <div class="w3-row w3-padding-64  " id="#about" style="background-color: #E8ECEB;">
-    <div class="w3-col m6 w3-padding-large w3-hide-small">
-      <img src="./image/myheadshot.png" class="w3-round w3-image w3-opacity-min box" alt="Table Setting" width="300" height="450">
+ <!-- justify-content-end -->
+ <div class="w3-col m6 w3-padding-large w3-hide-small d-flex justify-content-center">
+  <img src="./image/myheadshot.png" class="w3-round w3-image w3-opacity-min boximg" alt="Table Setting" width="300" height="450">
       <!-- https://picsum.photos/id/1025/400/300 -->
     </div>
 
